chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ pubspec.lock
 .svn/
 migrate_working_dir/
 
+
 # IntelliJ related
 *.iml
 *.ipr
@@ -52,6 +53,8 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+.vscode/
+
 
 # Symbolication related
 app.*.symbols
@@ -63,3 +66,12 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+.env
+assets/credentials.json
+.metadata
+android/
+macos/
+ios/
+andriod/
+test/
